nav styling done

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,8 +3,19 @@ nav {
   width: 100%;
   background-color: #4056A1;
   color: #FFF;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-nav > span {
-  font-family: "Bungee", sans-serif;
+nav > div{
   margin: 0 1.5em;
+  display: flex;
+  flex-direction: column;
+}
+nav > div > i {
+  color: red;
+  text-align: center;
+}
+nav .logo {
+  font-family: "Bungee", sans-serif;
 }
