form styled according to prototype

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,6 +28,12 @@ body {
 
  main {
    width: 90%;
+   margin: auto;
    background-color: #f4f1ec;
-   margin: 0 auto;
+   display: flex;
+   justify-content: center;
+ }
+
+ main h2 {
+   text-align: center;
  }
