textarea focus outline removed, new js file for counter logic added

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -16,10 +16,10 @@ form textarea {
   background-color: #f4f1ec;
   border-bottom: 5px solid #545149;
 }
-/* 
-form > textarea ::placeholder {
-  color: red;
-} */
+
+form textarea:focus{
+  outline: none;
+}
 
 form > div {
   display: flex;
