counter now turning red if chars goes over the limit

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,6 +21,10 @@ form textarea:focus{
   outline: none;
 }
 
+.over-limit {
+  color: red;
+}
+
 form > div {
   display: flex;
   justify-content: space-between;
