--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 0 1%;
 }
 
 form textarea {
@@ -29,6 +30,10 @@ form > div {
   display: flex;
   justify-content: space-between;
   font-family: "Bungee", sans-serif;
+}
+
+form > div > .counter {
+  padding-right: 0.5em;
 }
 
 .form-button {
