--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -39,3 +39,9 @@ body {
  main h2 {
    text-align: center;
  }
+
+ body > footer {
+   width: 100%;
+   height: 200px;
+   background-color: gray;
+ }
