--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,8 @@
 .new-tweet {
   padding: 2.5% 0;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .new-tweet form {
@@ -40,4 +42,13 @@ form > div > .counter {
   padding: .5%;
   background-color: #4056A1;
   color: #FFF;
+}
+
+.error-message {
+  text-align: center;
+  color: #FFF;
+  padding: 0.2em;
+  margin-bottom: 0.5em;
+  width: 100%;
+  background-color: red ;
 }
