created fixed error message container, error message appearing now instead of alerts

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -45,10 +45,26 @@ form > div > .counter {
 }
 
 .error-message {
+  height: 1.5em;
+  text-align: center;
+  color: #FFF;
+  padding: 0.2em;
+  margin-bottom: 0.5em;
+  width: 100%;
+}
+
+.error-message > span {
+  padding: 0.2em 2em;
+  margin-bottom: 0.5em;
+  width: 100%;
+  background-color:#ff0033;
+}
+
+/* .error-message {
   text-align: center;
   color: #FFF;
   padding: 0.2em;
   margin-bottom: 0.5em;
   width: 100%;
   background-color: red ;
-}
+} */
