--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,10 +14,37 @@ nav > div{
   display: flex;
   flex-direction: column;
 }
-nav > div > i {
+nav div i {
   color: red;
   text-align: center;
+  animation: bounce 2s infinite;
 }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(10px);
+  }
+  40% {
+    transform: translateY(-5px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+nav button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: none;
+  color: #FFF;
+  background-color: #4056A1;
+}
+nav button:hover {
+  cursor: pointer;
+  color: greenyellow
+}
+
 nav .logo {
   font-family: "Bungee", sans-serif;
 }
