--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -49,19 +49,45 @@ body {
    align-items: center;
  }
 
- .go-to-top {
+#toTop{
+  content: "\f077";
    position: fixed;
    bottom: 5vh;
    right: 1.5vw;
    z-index: 99;
-   padding: 0.3em;
+   padding: 0.2em 0.4em;
    outline: none;
    border: none;
    background-color: lightsalmon;
    border-radius: 15%;
    color: white;
    cursor: pointer;
+   transition: background-color .3s, 
+   opacity .5s, visibility .5s;
+   opacity: 0;
+   visibility: hidden;
  }
+
+ #toTop::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+#toTop:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+#toTop:active {
+  background-color: #555;
+}
+#toTop.show {
+  opacity: 1;
+  visibility: visible;
+}
 
  footer > div {
    margin: auto;
