--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
 .profile-header {
   height: 400px;
-  width: 100%;
+  margin-top: 2em;
+  margin-right: 2em;
   background-color: #b86e00;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   display: flex;
