--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -61,9 +61,15 @@ body {
 
  /* Media Queries */
 
- @media screen and (min-width: 600px) {
-  .profile-header {
-    width: 30%;
-  }
-
+ @media screen and (max-width: 799px) {
+   main{
+     flex-direction: column;
+     justify-content: center;
+   }
+   .profile-header {
+     width: 100%;
+   }
+   .form-tweets {
+     width: 100%;
+   }
  }
