--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,7 @@
  */
 html {
   box-sizing: border-box;
+  font-size: 18px;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -42,10 +43,6 @@ body {
    width: 60%;
  }
 
- main h2 {
-   text-align: center;
- }
-
  body > footer {
    width: 100%;
    height: 200px;
@@ -80,8 +77,9 @@ body {
     background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
     /* z-index: -1; */
    }
-   
+
    body {
      padding-top: 0;
+     font-size: 14px;
    }
  }
