--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -11,6 +11,13 @@
   width: 35%;
 }
 
-h2 {
+.profile-header img {
+  width: 100%;
+  height: auto;
+}
+
+.profile-header h2 {
   margin-top: 0;
+  font-size: 2rem;
+  color: #9edbd4;
 }
