added respinsive font sizing for nav menu

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,6 +9,9 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+nav span {
+font-size: 1.5rem;
+}
 nav > div{
   margin: 0 1.5em;
   display: flex;
