--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -58,7 +58,9 @@ body {
 
  /* Media Queries */
 
- @media screen and (max-width: 799px) {
+ /* For Tablets and Mobile Devices */
+
+ @media screen and (max-width: 768px) {
    main{
      padding: 0;
      flex-direction: column;
@@ -66,16 +68,18 @@ body {
    }
    .profile-header {
      width: 100%;
-     margin-top: 3em;
+     padding-top: 3.5rem;
+     margin-top: 0;
    }
    .form-tweets {
      width: 100%;
      padding: 0 2em;
    }
    nav {
-    background-color: #b86e00;
-    background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
-    /* z-index: -1; */
+    /* background-color: #b86e00;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png"); */
+    z-index: 5;
+    background: transparent;
    }
 
    body {
