--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,7 +21,6 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-family: 'Source Sans Pro', 'sans-serif';
-  font-size: 24px;
 }
 
 /*
@@ -68,18 +67,15 @@ body {
    }
    .profile-header {
      width: 100%;
-     padding-top: 3.5rem;
-     margin-top: 0;
+     margin-top: 4.4em;
    }
    .form-tweets {
      width: 100%;
      padding: 0 2em;
    }
    nav {
-    /* background-color: #b86e00;
-    background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png"); */
-    z-index: 5;
-    background: transparent;
+    background-color: #b86e00;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
    }
 
    body {
