--- a/public/styles/go-to-top.css
+++ b/public/styles/go-to-top.css
@@ -1,23 +1,21 @@
 #toTop{
   content: "\f077";
-   position: fixed;
-   bottom: 5vh;
-   right: 1.5vw;
-   z-index: 99;
-   padding: 0.1rem 0.7rem;
-   outline: none;
-   border: none;
-   background-color: lightsalmon;
-   border-radius: 15%;
-   color: white;
-   cursor: pointer;
-   transition: background-color .3s, 
-   opacity .5s, visibility .5s;
-   opacity: 0;
-   visibility: hidden;
- }
-
- #toTop::after {
+  position: fixed;
+  bottom: 5vh;
+  right: 1.5vw;
+  z-index: 99;
+  padding: 0.1rem 0.7rem;
+  outline: none;
+  border: none;
+  background-color: lightsalmon;
+  border-radius: 15%;
+  color: white;
+  cursor: pointer;
+  transition: background-color .3s, opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+}
+#toTop::after {
   content: "\f077";
   font-family: FontAwesome;
   font-weight: normal;
