--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -41,10 +41,10 @@ body {
    align-items: center;
    width: 60%;
  }
-
+  /* CSS for Footer */
  body > footer {
    width: 100%;
-   height: 100px;
+   height: 120px;
    background-color: teal;
    display: flex;
    flex-direction: column;
@@ -106,6 +106,9 @@ body {
    html {
      font-size: 14px;
    }
+   #toTop {
+     padding: 0.1rem 1.2rem;
+   }
  }
 
 /* For really small Mobile Devices */
@@ -124,5 +127,11 @@ body {
   }
   .form-tweets {
     padding: 0 0.5em;
+  }
+.footer-icons {
+  width: 70px;
+}
+  body > footer {
+    height: 80px;
   }
 }
