--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 999;
 }
 nav span {
 font-size: 1.5rem;
