--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,6 +21,10 @@
 #tweet-form textarea:focus{
   outline: none;
 }
+
+#tweet-form textarea::placeholder{
+  font-size: 1.5rem;
+}
 .over-limit {
   color: red;
 }
