--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -52,11 +52,11 @@
   height: 1.5em;
   text-align: center;
   color: #FFF;
-  padding: 0.2em;
   margin-bottom: 0.5em;
   width: 100%;
 }
 .error-message > span {
+  font-size: 1.2rem;
   padding: 0.2em 2em;
   margin-bottom: 0.5em;
   width: 100%;
